--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.19",
     "three": "^0.181.0",
     "web-vitals": "^3.0.4"
   },
